fix: improved global readability

--- a/stylepages.css
+++ b/stylepages.css
@@ -39,6 +39,8 @@ h1 {
 
 .kicker {
     font-size: 40px;
+    text-align: justify;
+    padding: 20px;
 }
 
 img {
@@ -46,7 +48,11 @@ img {
     border-radius: 8px;
 }
 .list {
+    font-size: 24px;
+}
 
+.box .list {
+    font-size: 24px;
 }
 
 .text {
